Updated Roster, and fixed spelling errors on calendar.

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -147,29 +147,31 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                       <table border="0" width="760">
                         <tbody>
                           <tr>
-                            <td id="BOLD" align="left">Laurene Weste<br>
-                            </td>
+                            <td id="BOLD" align="left">Laurene Weste<br></td>
                             <td align="left">President</td>
-                            <td align="left">&nbsp; </td>
-                            <td id="BOLD" align="left">Jack C. Stewart</td>
-                            <td align="left">Director</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Tom Hough</td>
+                            <td align="left">Director/Treasurer</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Becki Basham</td>
-                            <td align="left">Director/1st Vice President</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Jeff Wheat</td>
-                            <td align="left">Director</td>
+                            <td align="left">Director/1<sup>st</sup> Vice President</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Sheila Miller<br></td>
+                            <td align="left">Director/Secretary</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Tom Hough<br>
-                            </td>
-                            <td align="left">Director/Treasurer</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Andree Walper<br>
-                            </td>
+                            <td id="BOLD" align="left">Leon Worden</td>
+                            <td align="left">Director/2<sup>nd</sup> Vice President</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Nancy Gallarado</td>
+                            <td align="left">Director/Recording Secretary</td>
+                          </tr>
+                          <tr>
+                            <td id="BOLD" align="left">Jack C. Stewart</td>
+                            <td align="left">Director</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Gladys Farrell</td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
@@ -184,46 +186,30 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Sheila Miller<br>
-                            </td>
-                            <td align="left">Director/Secretary</td>
-                            <td align="left"><br>
-                            </td>
+                            <td id="BOLD" align="left">Jeff Wheat</td>
+                            <td align="left">Director</td>
+                            <td align="left"><br></td>
                             <td id="BOLD" align="left">Patti Rasmussen</td>
-                            <td align="left">Director</td>
-                          </tr>
-                          <tr>
-                            <td id="BOLD" align="left">Leon Worden</td>
-                            <td align="left">Director</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Michelle Rennie<br>
-                            </td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Candy Veluzat</td>
                             <td align="left">Director</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Nancy Gallarado</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Michelle Rennie<br></td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">E.J. Stephens<br>
-                            </td>
+                            <td id="BOLD" align="left">E.J. Stephens<br></td>
                             <td align="left">Director</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Gladys Farrell</td>
-                            <td align="left">Director</td>
+                            <td align="left"><br></td>
+                            <td id="BOLD" align="left">Tim Burkhart<br></td>
+                            <td align="left">Associate Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Tim Murphy<br>
-                            </td>
+                            <td id="BOLD" align="left">Tim Murphy<br></td>
                             <td align="left">Director</td>
-                            <td align="left"><br>
-                            </td>
+                            <td align="left"><br></td>
                             <td id="BOLD" align="left"></td>
                             <td align="left"></td>
                           </tr>
