--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click
-                                  <a href="https://mailchi.mp/4d78795516a6/fall-2019-hart-of-the-matter-2199537"  target="_blank">
-                                  HERE for the Winter 2019&mdash;2020 edition
+                                  <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
+                                  HERE for the Spring 2020 &ndash; pt. 1 edition
                                   </a>
                                   </h2>
                                   </td>
