Park Closure!  :(  And part 2 of the newsletter.

--- a/index.htm
+++ b/index.htm
@@ -208,7 +208,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <h2>
                                   Click
                                   <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
-                                  HERE for the Spring 2020 &ndash; pt. 1 edition
+                                  HERE for the Spring 2020 edition &ndash; pt. 1
+                                  </a>
+                                  and
+                                  <a href="https://mailchi.mp/15552429c033/part-2-hart-of-the-matter-spring-2020"  target="_blank">
+                                  HERE for the Spring 2020 edition &ndash; pt. 2
                                   </a>
                                   </h2>
                                   </td>
@@ -221,6 +225,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+                                <!--
                                 <tr><td>
                                     <p align="center">
                                     <img src="Zoo/images/deer_LayingDown.jpg" />
@@ -241,6 +246,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+                                -->
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -260,10 +266,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-<p>
-We are sorry to report the temporary closing of William S. Hart Museum and the gift shop to avoid 
-potential spread of the Coronavirus.  The park and barnyard are still open, however we will not be doing group 
-tours nor animal presentations until further notice. 
+<p align="center">
+<img src="images/ParkClosure.png"/>
 <p>Also, we request that guests who are sick to not 
 visit the park  - for the health of our other guests, staff and volunteers. 
 </p>
