Added closure signs to subpages affected.

--- a/Mansion/mansion.html
+++ b/Mansion/mansion.html
@@ -181,6 +181,9 @@ cellspacing="0" bgcolor="#F6F5EE">
                   <tbody>
                     <tr>
                       <td valign="top">
+<p align="center">
+<img align="center" src="../images/ParkClosure.png"/>
+</p>
                         <div align="center" class="IMG">
                           <img border="0" src=
                           "../images/house_WSH.jpg" width="340"
