--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -138,6 +138,10 @@ function MM_swapImage() { //v3.0
 					</TABLE>
 					</div>
 					<HR>
+<p align="center">
+<img align="center" src="../images/ParkClosure.png"/>
+</p>
+                    <!--
 					<p class="cowboyfest" align="center">
                     <em>Barnyard now partially open 9am-2pm every day!</em>
                     <p class="cowboyfest" align="center">
@@ -147,6 +151,7 @@ function MM_swapImage() { //v3.0
                     So, come on by and see the Alpacas and all the other fun 
                     (non-fowl) friends at our now-open barnyard!!!
                     </p>
+                    -->
 					<p class="lots" align="center" style="margin-top: 7px; margin-bottom: 5px">
 					<small>
 					<small>
