--- a/index.html
+++ b/index.html
@@ -259,13 +259,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-
                                 <p style="text-indent: 20px"
                                   align="center"> <font color="#008000"
                                     size="2">We thank you for your
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
+<p align="center">
+<img src="images/EasterClosure-sm.JPG"/>
 <p align="center">
 <img src="images/ParkClosure.png"/>
 <p>Also, we request that guests who are sick to not 
