Added Easter closure and part 3 of the Spring Hart of the Matter.

--- a/index.htm
+++ b/index.htm
@@ -210,9 +210,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
                                   HERE for the Spring 2020 edition &ndash; pt. 1
                                   </a>
-                                  and
+                                  ,
                                   <a href="https://mailchi.mp/15552429c033/part-2-hart-of-the-matter-spring-2020"  target="_blank">
                                   HERE for the Spring 2020 edition &ndash; pt. 2
+                                  </a>
+                                  and
+                                  <a href="https://mailchi.mp/d28d2ec28fba/part-3-hart-of-the-matter-spring-2020"  target="_blank">
+                                  HERE for the Spring 2020 edition &ndash; pt. 3
                                   </a>
                                   </h2>
                                   </td>
