--- a/index.html
+++ b/index.html
@@ -206,18 +206,29 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <img width="312" src="images/eHOTM.png" />
                                   </a>
                                   <h2>
-                                  Click
+                                  Click below for all 4 volumes (and counting) of the Spring 2020 Hart of the Matter newsletters:
+                                  <ul>
+                                  <li>
                                   <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
-                                  HERE for the Spring 2020 edition &ndash; pt. 1
+                                  Part 1 &mdash; Covid-19
                                   </a>
-                                  ,
+                                  </li>
+                                  <li>
                                   <a href="https://mailchi.mp/15552429c033/part-2-hart-of-the-matter-spring-2020"  target="_blank">
-                                  HERE for the Spring 2020 edition &ndash; pt. 2
+                                  Part 2 &mdash; Newhallywood
                                   </a>
-                                  and
+                                  </li>
+                                  <li>
                                   <a href="https://mailchi.mp/d28d2ec28fba/part-3-hart-of-the-matter-spring-2020"  target="_blank">
-                                  HERE for the Spring 2020 edition &ndash; pt. 3
+                                  Part 3 &mdash; Critter Corner
                                   </a>
+                                  </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/2f15da57b014/hart-of-the-matter-part-4-of-spring-2020"  target="_blank">
+                                  Part 4 &mdash; Miles of Tiles
+                                  </a>
+                                  </li>
+                                  </ul>
                                   </h2>
                                   </td>
                                 </tr>
@@ -270,19 +281,22 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<img src="images/EasterClosure-sm.JPG"/>
-<p align="center">
 <img src="images/ParkClosure.png"/>
-<p>Also, we request that guests who are sick to not 
+<small><p>Also, we request that guests who are sick to not 
 visit the park  - for the health of our other guests, staff and volunteers. 
 </p>
 <p>
 Please check back here regularly for Friends of Hart Park updates.
-</p>
+</p></small>
+<p align="center">
+<img src="images/brighter.jpg"/>
+<br>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2020 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
+                                <h4>Note: all dates subject to cancellation or postponement due to Covid-19.
+                                Please check back and we will update as we learn more.</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
