Added Curfew information due to riots.

--- a/index.htm
+++ b/index.htm
@@ -281,8 +281,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
+<p>
+Due to the LA County curfew, we have been directed to close our facilities at 4 pm; this early closure will be in effect today Monday, June 1<sup>st</sup> thru Friday, June 5<sup>th</sup>&hellip; everyone should be out of the facility by 5pm.  There will be an assessment this Thursday, June 4 to see if the curfew will be extended.  
+</p>
 <img src="images/ParkClosure.png"/>
-<small><p>Also, we request that guests who are sick to not 
+<small><p align="center">Also, we request that guests who are sick to not 
 visit the park  - for the health of our other guests, staff and volunteers. 
 </p>
 <p>
