Cancelled most of the summer due to Coronavirus.

--- a/index.htm
+++ b/index.htm
@@ -298,7 +298,10 @@ Please check back here regularly for Friends of Hart Park updates.
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2020 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
-                                <h4>Note: all dates subject to cancellation or postponement due to Covid-19.
+                                <h4>Note: all dates subject to cancellation or postponement due to Covid-19.<br>
+</h4>
+<h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
+<h4>
                                 Please check back and we will update as we learn more.</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
@@ -306,24 +309,19 @@ Please check back here regularly for Friends of Hart Park updates.
 <tbody>
 
 <tr> <td id="EventDate">
-<del>Saturday &amp; Sunday, Apr 18<sup>th</sup> &amp; 19<sup>th</sup></del>
+<del>Saturday &amp; Sunday, Jun 13<sup>th</sup> &amp; 14<sup>th</sup> 10am&mdash;5pm in Hart Hall</del>
 </td> <td id="Event"> 
-<del>Cowboy Festival</del> <i>We are sorry to report that this year's Cowboy Festival is cancelled due to concerns over Coronavirus</i>
+<del>SCV Quilt Guild Quilt Show</del>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday &amp; Sunday, Jun 13<sup>th</sup> &amp; 14<sup>th</sup> 10am&mdash;5pm in Hart Hall
-</td> <td id="Event"> 
-SCV Quilt Guild Quilt Show
-</td></tr>
-<tr> <td id="EventDate">
-Fridays, June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, Aug 21<sup>st</sup> at dusk, Picnic Grounds
+Fridays, <del>June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, </del> Aug 21<sup>st</sup> at dusk, Picnic Grounds
 </td> <td id="Event"> 
 Summer Movies in the Park Series 
 </td></tr>
 <tr> <td id="EventDate">
-Thursday, July 12<sup>th</sup> at 7pm in Hart Hall (Admission is free)
+<del>Thursday, July 12<sup>th</sup> at 7pm in Hart Hall (Admission is free)</del>
 </td> <td id="Event"> 
-&ldquo;Saxtravaganza&rdquo; &ndash; Chamber Music Concert
+<del>&ldquo;Saxtravaganza&rdquo; &ndash; Chamber Music Concert</del>
 </td></tr>
 <tr> <td id="EventDate">
 Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio
