--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -116,6 +116,60 @@ function MM_swapImage() { //v3.0
                     <a target="_blank" href="https://bit.ly/hartofthematter">
                     <img alt="Hart of the Matter" src="../images/HOTM.png"/>
                     </a>
+                                  Click below for recent Hart of the Matter newsletters:
+                    <div align="left">
+                                  <ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/28ace8f2f681/hart-of-the-matter-summer-2019?e=[UNIQID]"  target="_blank">
+                                  Summer 2019
+                                  </a>
+                                  <li>
+                                  <a href="https://mailchi.mp/499a4392601b/fall-2019-hart-of-the-matter?e=[UNIQID]"  target="_blank">
+                                  Fall 2019
+                                  </a>
+                                  </li>
+                                  <ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/f4f04e537556/hart-of-the-matter-fall-2019-addendum?e=[UNIQID]"  target="_blank">
+                                  Fall Addendum
+                                  </a>
+                                  </ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/4d78795516a6/fall-2019-hart-of-the-matter-2199537?e=[UNIQID]"  target="_blank">
+                                  Winter 2019
+                                  </a>
+                                  </li>
+                                  <li>
+                                  Spring 2020
+                                  </li>
+                                  <ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
+                                  Part 1 &mdash; Covid-19
+                                  </a>
+                                  </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/15552429c033/part-2-hart-of-the-matter-spring-2020"  target="_blank">
+                                  Part 2 &mdash; Newhallywood
+                                  </a>
+                                  </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/d28d2ec28fba/part-3-hart-of-the-matter-spring-2020"  target="_blank">
+                                  Part 3 &mdash; Critter Corner
+                                  </a>
+                                  </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/2f15da57b014/hart-of-the-matter-part-4-of-spring-2020"  target="_blank">
+                                  Part 4 &mdash; Miles of Tiles
+                                  </a>
+                                  <li>
+                                  <a href="https://mailchi.mp/ebf4e9141b05/hart-of-the-matter-spring-part-5-of-5"  target="_blank">
+                                  Part 5 &mdash; Gift Shop and Museum Updates
+                                  </a>
+                                  </li>
+                                  </ul>
+                    </div>
+                    For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
 					<TD width="60">
 					&nbsp;
 					</TD>
