--- a/index.htm
+++ b/index.htm
@@ -206,7 +206,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <img width="312" src="images/eHOTM.png" />
                                   </a>
                                   <h2>
-                                  Click below for all 4 volumes (and counting) of the Spring 2020 Hart of the Matter newsletters:
+                                  Click below for all 5 volumes of the Spring 2020 Hart of the Matter newsletters:
                                   <ul>
                                   <li>
                                   <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
@@ -226,6 +226,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <li>
                                   <a href="https://mailchi.mp/2f15da57b014/hart-of-the-matter-part-4-of-spring-2020"  target="_blank">
                                   Part 4 &mdash; Miles of Tiles
+                                  </a>
+                                  <li>
+                                  <a href="https://mailchi.mp/ebf4e9141b05/hart-of-the-matter-spring-part-5-of-5"  target="_blank">
+                                  Part 5 &mdash; Gift Shop and Museum Updates
                                   </a>
                                   </li>
                                   </ul>
@@ -321,9 +325,9 @@ Summer Movies in the Park Series
 <del>&ldquo;Saxtravaganza&rdquo; &ndash; Chamber Music Concert</del>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio
+<del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
 </td> <td id="Event"> 
-Silents Under the Stars
+<del>Silents Under the Stars</del>
 </td></tr>
 <tr> <td id="EventDate">
 Saturday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall
