Added Summer 2020 newsletter.

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -168,6 +168,12 @@ function MM_swapImage() { //v3.0
                                   </a>
                                   </li>
                                   </ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/2ccbf814505c/hart-of-the-matter-summer-2020" target="_blank">
+                                  Summer 2020
+                                  </a>
+                                  </li>
+                                  </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
 					<TD width="60">
