--- a/index.htm
+++ b/index.htm
@@ -206,33 +206,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <img width="312" src="images/eHOTM.png" />
                                   </a>
                                   <h2>
-                                  Click below for all 5 volumes of the Spring 2020 Hart of the Matter newsletters:
-                                  <ul>
-                                  <li>
-                                  <a href="https://mailchi.mp/87607f558410/hart-of-the-matter-spring-2020-pt-1"  target="_blank">
-                                  Part 1 &mdash; Covid-19
-                                  </a>
-                                  </li>
-                                  <li>
-                                  <a href="https://mailchi.mp/15552429c033/part-2-hart-of-the-matter-spring-2020"  target="_blank">
-                                  Part 2 &mdash; Newhallywood
-                                  </a>
-                                  </li>
-                                  <li>
-                                  <a href="https://mailchi.mp/d28d2ec28fba/part-3-hart-of-the-matter-spring-2020"  target="_blank">
-                                  Part 3 &mdash; Critter Corner
-                                  </a>
-                                  </li>
-                                  <li>
-                                  <a href="https://mailchi.mp/2f15da57b014/hart-of-the-matter-part-4-of-spring-2020"  target="_blank">
-                                  Part 4 &mdash; Miles of Tiles
-                                  </a>
-                                  <li>
-                                  <a href="https://mailchi.mp/ebf4e9141b05/hart-of-the-matter-spring-part-5-of-5"  target="_blank">
-                                  Part 5 &mdash; Gift Shop and Museum Updates
-                                  </a>
-                                  </li>
-                                  </ul>
+                                  Click 
+                                  <a href="https://mailchi.mp/2ccbf814505c/hart-of-the-matter-summer-2020"  target="_blank">
+                                  here for the Summer 2020 Hart of the Matter newsletter</a>.<br>
+                                  Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
                                 </tr>
@@ -310,19 +287,9 @@ Please check back here regularly for Friends of Hart Park updates.
 <tbody>
 
 <tr> <td id="EventDate">
-<del>Saturday &amp; Sunday, Jun 13<sup>th</sup> &amp; 14<sup>th</sup> 10am&mdash;5pm in Hart Hall</del>
+Fridays, <del>June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, Aug 21<sup>st</sup> at dusk, Picnic Grounds</del> 
 </td> <td id="Event"> 
-<del>SCV Quilt Guild Quilt Show</del>
-</td></tr>
-<tr> <td id="EventDate">
-Fridays, <del>June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, </del> Aug 21<sup>st</sup> at dusk, Picnic Grounds
-</td> <td id="Event"> 
-Summer Movies in the Park Series 
-</td></tr>
-<tr> <td id="EventDate">
-<del>Thursday, July 12<sup>th</sup> at 7pm in Hart Hall (Admission is free)</del>
-</td> <td id="Event"> 
-<del>&ldquo;Saxtravaganza&rdquo; &ndash; Chamber Music Concert</del>
+<del>Summer Movies in the Park Series</del>
 </td></tr>
 <tr> <td id="EventDate">
 <del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
@@ -330,29 +297,29 @@ Summer Movies in the Park Series
 <del>Silents Under the Stars</del>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall
+<del>Saturday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall</del>
 </td> <td id="Event"> 
-The High Desert Modular Model Railroad Club Annual Train Show
+<del>The High Desert Modular Model Railroad Club Annual Train Show</del>
 </td></tr>
 <tr> <td id="EventDate">
-Sunday, Sept. 20<sup>th</sup> 8am&mdash;12pm
+<del>Sunday, Sept. 20<sup>th</sup> 8am&mdash;12pm</del>
 </td> <td id="Event"> 
-Yoga Kula (Community) Festival
+<del>Yoga Kula (Community) Festival</del>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday &amp; Sunday, Oct. 3<sup>rd</sup> 11am&mdash;6pm &amp; Oct 4<sup>th</sup> 11am&mdash;5pm, Picnic Grounds
+<del>Saturday &amp; Sunday, Oct. 3<sup>rd</sup> 11am&mdash;6pm &amp; Oct 4<sup>th</sup> 11am&mdash;5pm, Picnic Grounds</del>
 </td> <td id="Event"> 
-Native American Pow Wow &amp; Craft Fair
+<del>Native American Pow Wow &amp; Craft Fair</del>
 </td></tr>
 <tr> <td id="EventDate">
-Sunday, Oct. 11<sup>th</sup> 11am&mdash;4pm, Picnic Grounds
+<del>Sunday, Oct. 11<sup>th</sup> 11am&mdash;4pm, Picnic Grounds</del>
 </td> <td id="Event"> 
-Bow Wows &amp; Meows Pet Fair
+<del>Bow Wows &amp; Meows Pet Fair</del>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday &amp; Sunday, Oct. 17<sup>th</sup> &amp; Oct 18<sup>th</sup> in Hart Hall
+<del>Saturday &amp; Sunday, Oct. 17<sup>th</sup> &amp; Oct 18<sup>th</sup> in Hart Hall</del>
 </td> <td id="Event"> 
-SCV Artists Association Arts Classic
+<del>SCV Artists Association Arts Classic</del>
 </td></tr>
 <tr> <td id="EventDate">
 Saturday, Nov. 7<sup>th</sup> in Hart Hall
