Cancelled 2020 Pow Wow due to pandemic

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -167,6 +167,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                       <tbody>
                         <tr>
                           <td>
+<!--
                             <p style="margin-top: 7px; margin-bottom:
                               5px" align="center"> <h2 align="center"> 
 Fernandeno Tataviam Band of Mission Indians,<br>
@@ -174,6 +175,7 @@ County of Los Angeles Dept. of Parks and Recreation,<br>
 and The Friends of Hart Park &amp; Museum<br></h2>
 <h3 align="center"><i>were proud to present the<br></i></h3></p>
                             <h2 align="center">26<sup>th</sup> Annual</h2>
+-->
                             <p align="center"> </p>
                             <p align="center"> </p>
                             <p align="center"> <img
@@ -181,10 +183,13 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                             </p>
                             <p align="center"> </p>
                             <h2 align="center"> and Craft Fair<br><br></h2>
-<h1 align="center">Stay tuned to this page for details on the 2020 Pow Wow, as they become available!</h1>
+<h1 align="center">We're sorry to report that the 2020 Pow Wow has been 
+cancelled due to the Corona Virus pandemic.</h1>
                               </h2>
                     <hr>
 <p><h2 align="center">
+Stay tuned to this page for details on the 2021 Pow Wow, as they become available.<br><br>
+<!--
 Saturday, October 5<sup>th</sup> &mdash; 11am to 6pm <br>
 Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
 </h2><p>
@@ -192,6 +197,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                           <p>Princess Contest &mdash; ages 14 to 21</p>
                                           <p>All Drums &amp; Dancers Welcome!</p>
 </h3>
+-->
                             <h2 id="PowWowNote" align="center"><b>
                                     Vendors, please contact Cindy Reeves 
                                     at the phone number shown below.</b><br>
