Canceled everything in 2020, wish "Happy Holidays" :-/

--- a/index.htm
+++ b/index.htm
@@ -270,11 +270,16 @@ visit the park  - for the health of our other guests, staff and volunteers.
 Please check back here regularly for Friends of Hart Park updates.
 </p></small>
 <p align="center">
-<img src="images/brighter.jpg"/>
+<img src="images/2020HappyHolidays.JPG"/>
 <br>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2020 Calendar of Events</h2>
+<a href= "images/2020UpcomingEvents.JPG" 
+title="2020 Events Canceled -- 2021 to come!" rel="lightbox[upcoming2020]">
+<img align="center" src="images/2020UpcomingEvents-sm.JPG" />
+</a>
+<!--
                                 <h3>Click on links as details become available</h3>
                                 <h4>Note: all dates subject to cancellation or postponement due to Covid-19.<br>
 </h4>
@@ -336,6 +341,7 @@ Saturday, Dec. 5<sup>th</sup>
 </td> <td id="Event"> 
 Cowboys &amp; Carols
 </td></tr>
+-->
                                     <!--
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
@@ -361,11 +367,11 @@ Cowboys &amp; Carols
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
+                                    <!--
                                   </tbody>
                                 </table>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
-                                    <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
